crates/cli/tests/snapshots/run_node_test__sync_depends_on__creates_missing_tsconfig_json_when_syncs_as_reference-2.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 480
expression: "read_to_string(fixture.path().join(\"depends-on/tsconfig.json\")).unwrap()"
---
{
  "exclude": [
    "*.js"
  ],
  "references": [
    {
      "path": "../deps-a"
    },
    {
      "path": "../deps-b"
    },
    {
      "path": "../deps-c"
    }
  ]
}

