crates/cli/tests/snapshots/run_node_test__sync_depends_on__creates_missing_tsconfig_json_when_syncs_as_reference-3.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 483
expression: "read_to_string(fixture.path().join(\"deps-a/tsconfig.json\")).unwrap()"
---
{
  "extends": "../tsconfig.options.json",
  "include": [
    "**/*"
  ],
  "references": []
}
