crates/cli/tests/snapshots/run_node_test__sync_depends_on__creates_missing_tsconfig_json_when_syncs_as_reference.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 477
expression: "read_to_string(fixture.path().join(\"tsconfig.json\")).unwrap()"
---
{
  "references": [
    {
      "path": "base"
    },
    {
      "path": "depends-on"
    },
    {
      "path": "deps-a"
    },
    {
      "path": "deps-b"
    },
    {
      "path": "deps-c"
    }
  ]
}

