crates/cli/tests/snapshots/run_node_test__sync_depends_on__format_Star.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 523
expression: "read_to_string(sandbox.path().join(\"depends-on/package.json\")).unwrap()"
---
{
  "name": "test-node-depends-on",
  "dependencies": {
    "react": "17.0.0",
    "test-node-deps-a": "*",
    "test-node-deps-b": "*"
  }
}

