crates/cli/tests/snapshots/run_node_test__sync_depends_on__format_file.snap
---
source: crates/cli/tests/run_node_test.rs
assertion_line: 439
expression: "read_to_string(fixture.path().join(\"depends-on/package.json\")).unwrap()"
---
{
  "name": "test-cases-depends-on",
  "dependencies": {
    "react": "17.0.0",
    "test-cases-deps-a": "file:../deps-a",
    "test-cases-deps-b": "file:../deps-b"
  }
}

